--- a/style.css
+++ b/style.css
@@ -227,4 +227,55 @@ section.about .flex{
     color: var(--c-watercolor);
 }
 
+/*PORTFOLIO STYLE*/
 
+section.portfolio{
+    padding: 60px 4%;
+    box-shadow: 0 0 40px 10px #ffffff0e;
+
+}
+
+section.portfolio .flex{
+    justify-content: space-around;
+}
+
+section.portfolio .flex .img-port{
+    margin-top: 60px;
+}
+
+.img-port{
+    width: 330px;
+    height: 460px;
+    background-size: cover; /*Cobrir 100% da imagem passada ajustada a div.*/
+    background-position: 0% 100%;
+    transition: 5s;
+    cursor: pointer;
+    border-radius: 40px;
+    position: relative; /*Combinando o position relative faz com que a div filha que tiver o position absolute so trabalhe dentro dela*/
+}
+
+.img-port:hover{
+    background-position: 100% 100%;
+}
+
+.overlay{
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000059;
+    border-radius: 40px;
+    display: flex; /*Combinando com as 2 propriedades abaixo irá colocar o texto no meio*/
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 600;
+    color: #fff;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.overlay:hover{
+    opacity: 1;
+}
