--- a/style.css
+++ b/style.css
@@ -113,6 +113,10 @@ header .btn-header button:hover {
     box-shadow: 0px 0px 8px var(--c-watercolor);
 }
 
+.btn-rede{
+    display: none;
+}
+
 /*TOP OF THE SITE STYLE*/
 
 section.top-of-site {
